components/quarkus-component/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: blue-dolphin
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: quarkus-component
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elquarkus-component
  namespace: pdave
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-quarkus-component
    weight: null
status: {}
